--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.2",
     "react-scroll": "^1.8.9",
+    "react-toastify": "^11.0.5",
     "styled-components": "^6.0.0-rc.1"
   },
   "devDependencies": {
