--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,6 @@
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src", "src/types"],
+  "include": ["src", "src/types", "i18n.ts"],
   "exclude": ["node_modules", "dist"]
 }
