--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     "react-i18next": "^12.3.1",
     "react-icons": "^4.8.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.11.2",
+    "react-router-dom": "^6.30.3",
     "react-scroll": "^1.8.9",
     "react-toastify": "^11.0.5",
-    "styled-components": "^6.0.0-rc.1"
+    "react-tsparticles": "^2.12.2",
+    "styled-components": "^6.0.0-rc.1",
+    "tsparticles": "^3.9.1",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.28.5",
